--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -1,15 +1,30 @@
+.about-cards.container.col-md-12 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .about-cards.container.col-md-12 figure {
   overflow: hidden;
   height: 350px;
   position: relative;
+  text-align: center;
 }
 
 .about-cards.container.col-md-12 img {
   height: inherit;
+  /*
   position: absolute;
   right: 0;
   left: 0;
   top: 0;
   bottom: 0;
-  transform: translate(-15%, 0%);
+  transform: translate(-0%, 0%);
+  */
+}
+
+.about-cards .card.col-md-4 {
+  padding: 0;
+  margin: 0 15px;
+  max-width: 30%;
 }
