--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -23,8 +23,8 @@
   */
 }
 
-.about-cards .card.col-md-4 {
-  padding: 0;
-  margin: 0 15px;
-  max-width: 30%;
+svg.svg-inline--fa.fa-github.fa-w-16 {
+  color: #000;
+  height: 40px;
+  width: 40px;
 }
