--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -28,3 +28,8 @@ svg.svg-inline--fa.fa-github.fa-w-16 {
   height: 40px;
   width: 40px;
 }
+svg.svg-inline--fa.fa-linkedin.fa-w-14 {
+  height: 40px;
+  width: 40px;
+  color: #0072b1;
+}
