--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -1,3 +1,7 @@
+.about-me-container.container.col-md-12 {
+  padding-bottom: 50px;
+}
+
 .about-cards.container.col-md-12 {
   display: flex;
   flex-wrap: wrap;
