--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -9,32 +9,33 @@
   justify-content: center;
 }
 
-/*++++++++CARD COL-MD-6:LAST-CHILD++++++++++*/
+/*++++++++CARD COL-MD-7:LAST-CHILD++++++++++*/
 .about-cards .card.col-md-7:last-child {
   display: flex;
   text-align: left;
-}
-
-.about-cards .card.col-md-7 .social-icons {
-  text-align: center;
-  padding-top: 50px;
 }
 
 svg.svg-inline--fa.fa-github.fa-w-16 {
   color: #000;
   height: 40px;
   width: 40px;
+  margin: 0 5px;
 }
 svg.svg-inline--fa.fa-linkedin.fa-w-14 {
   height: 40px;
   width: 40px;
   color: #0072b1;
+  margin: 0 5px;
+}
+
+.about-me-title {
+  padding-bottom: 25px;
 }
 
 /*++++++++FIGURE & IMG+++++++*/
 .about-cards.container.col-md-12 figure {
   overflow: hidden;
-  height: 350px;
+  height: 400px;
   position: relative;
   text-align: right;
 }
@@ -51,13 +52,21 @@ svg.svg-inline--fa.fa-linkedin.fa-w-14 {
   */
 }
 
-/*++++++++CARD COL-MD-6++++++++++*/
+/*++++++++ABOUT_CARDS++++++++++*/
 .about-cards .card {
   border: none;
   background-color: transparent;
 }
 
+.about-cards .card .social-icons {
+  padding-top: 30px;
+}
+
 /*+++++++++TECHSTACK STYLING++++++*/
+.techContainer.container {
+  padding-bottom: 100px;
+}
+
 .techStack.container.col-md-12 {
   display: flex;
   flex-wrap: wrap;
