--- a/src/pages/Portfolio/portfolio.scss
+++ b/src/pages/Portfolio/portfolio.scss
@@ -53,3 +53,9 @@
   color: #fff;
   font-weight: bold;
 }
+
+.portfolio-projects a:hover {
+  color: #fff;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
