--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -16,9 +16,11 @@ nav.navbar.navbar-expand-lg.navbar-light {
 
 .navbar-nav.nav-fill a {
   color: #fff;
+  transition: 0.5s;
 }
 
 .navbar-nav.nav-fill a:hover {
+  font-size: 1.2rem;
   font-weight: bold;
   text-decoration: none;
 }
