--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -62,6 +62,16 @@ svg.svg-inline--fa.fa-linkedin.fa-w-14 {
   padding-top: 30px;
 }
 
+.about-cards a {
+  color: #000;
+  text-decoration: underline;
+}
+
+.about-cards a:hover {
+  font-weight: bold;
+  color: #000;
+}
+
 /*+++++++++TECHSTACK STYLING++++++*/
 .techContainer.container {
   padding-bottom: 100px;
