changed email hover effect

--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -65,6 +65,7 @@ svg.svg-inline--fa.fa-linkedin.fa-w-14 {
 .about-cards a {
   color: #000;
   text-decoration: underline;
+  transition: 0.2s;
 }
 
 .about-cards a:hover {
