--- a/src/pages/Portfolio/portfolio.scss
+++ b/src/pages/Portfolio/portfolio.scss
@@ -56,7 +56,9 @@
 }
 
 .portfolio-projects a:hover {
+  content: "";
   color: #fff;
   font-size: 1.2rem;
   text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.2);
 }
