--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -1,6 +1,7 @@
 /*+++++++CONTAINER+++++++++*/
 .about-me-container {
-  padding: 100px 0;
+  padding: 50px 0;
+  margin: 50px auto;
 }
 
 .about-cards.container.col-md-12 {
@@ -16,7 +17,7 @@
 }
 
 svg.svg-inline--fa.fa-github.fa-w-16 {
-  color: #000;
+  color: #fff;
   height: 40px;
   width: 40px;
   margin: 0 5px;
@@ -75,7 +76,7 @@ svg.svg-inline--fa.fa-linkedin.fa-w-14 {
 
 /*+++++++++TECHSTACK STYLING++++++*/
 .techContainer.container {
-  padding-bottom: 100px;
+  margin: 50px auto;
 }
 
 .techStack.container.col-md-12 {
@@ -84,15 +85,304 @@ svg.svg-inline--fa.fa-linkedin.fa-w-14 {
   justify-content: center;
 }
 
+/*+++++++++++TECH CARD++++++++++++++*/
+$anime-time: 8s;
+
+$box-size: 180px;
+$clip-distance: 0.05;
+$clip-size: $box-size * (1 + $clip-distance * 1.8);
+$path-width: 2px;
+
+$main-color: #69ca62;
+
+%full-fill {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .technology.card.col-md-2 {
-  border: none;
+  @extend %full-fill;
+  width: $box-size;
+  height: $box-size;
+  margin: 30px 15px;
+  background: transparent;
+  color: $main-color;
+  box-shadow: inset 0 0 0 1px rgba($main-color, 0.5);
+  position: relative;
 }
 
 .technology.card.col-md-2 figure {
-  height: 50px;
+  height: 80px;
   overflow: hidden;
+  margin: 3rem 0 3rem;
+  z-index: 9;
 }
 
 .technology.card.col-md-2 img {
   height: 100%;
+}
+
+.technology.card.col-md-2::before,
+.technology.card.col-md-2::after {
+  @extend %full-fill;
+  content: "";
+  z-index: -1;
+  margin: -1 * $clip-distance * 100%;
+  box-shadow: inset 0 0 0 $path-width;
+  animation: clipMe $anime-time linear infinite;
+}
+
+.technology.card.col-md-2::before {
+  animation-delay: $anime-time * -0.5;
+}
+
+// for debug
+.technology.card.col-md-2:hover:after {
+  background-color: rgba(#f00, 0.3);
+}
+
+.technology.card.col-md-2:hover:before {
+  background-color: rgba(#f00, 0.3);
+}
+
+@keyframes clipMe {
+  0%,
+  100% {
+    clip: rect(0px, $clip-size, $path-width, 0px);
+  }
+  25% {
+    clip: rect(0px, $path-width, $clip-size, 0px);
+  }
+  50% {
+    clip: rect($clip-size - $path-width, $clip-size, $clip-size, 0px);
+  }
+  75% {
+    clip: rect(0px, $clip-size, $clip-size, $clip-size - $path-width);
+  }
+}
+
+/* Neon Light Effect 
+.technology.card.col-md-2 .neon-light {
+  width: 100%;
+  margin-bottom: 5px;
+  box-shadow: 0 0 40px 5px #fff, inset 0 0 10px #fff, 0 0 160px 20px #08f,
+    inset 0 0 10px #08f, 0 0 320px 30px #08f, inset 0 0 10px #08f;
+  position: relative;
+}
+
+.technology.card.col-md-2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+
+.technology.card.col-md-2::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.2) 0,
+    rgba(0, 0, 0, 1) 100%
+  );
+} */
+
+/*+++++++++++BUTTON++++++++++*/
+button.type-3.btn.btn-primary {
+  position: relative;
+  padding: 1em 1.5em;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  outline: none;
+  font-size: 18px;
+  margin: 0em 0.8em;
+  color: #fff;
+}
+
+button.type-3.btn.btn-primary::after,
+button.type-3.btn.btn-primary::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20%;
+  height: 20%;
+  border: 2px solid;
+  transition: all 0.6s ease;
+  border-radius: 2px;
+}
+
+button.type-3.btn.btn-primary::after {
+  bottom: 0;
+  right: 0;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: #fff;
+  border-right-color: #fff;
+}
+
+button.type-3.btn.btn-primary::before {
+  top: 0;
+  left: 0;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-top-color: #fff;
+  border-left-color: #fff;
+}
+
+button.type-3.btn.btn-primary:hover:after,
+button.type-3.btn.btn-primary:hover:before {
+  border-bottom-color: #fff;
+  border-right-color: #fff;
+  border-top-color: #fff;
+  border-left-color: #fff;
+  width: 100%;
+  height: 100%;
+}
+
+//ANIMATED BUTTON
+.about-me-container:hover {
+  color: #fff !important;
+  text-decoration: none !important;
+  box-shadow: 0px 5px 20px 5px rgba(169, 228, 233, 0.2);
+  transition: 0.5s;
+}
+
+.about-me-container {
+  display: inline-block;
+  transform: translate(0%, 0%);
+  overflow: hidden;
+  z-index: 9;
+  position: relative;
+  left: 20px;
+}
+
+.about-me-container span {
+  position: absolute;
+}
+
+.about-me-container span:nth-child(1) {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: -webkit-gradient(
+    linear,
+    right top,
+    left top,
+    from(rgba(255, 220, 220, 0)),
+    to(#243c9c)
+  );
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #243c9c);
+  -webkit-animation: 2s animateTop linear infinite;
+  animation: 2s animateTop linear infinite;
+}
+
+@keyframes animateTop {
+  0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+
+.about-me-container span:nth-child(2) {
+  top: 0px;
+  right: 0px;
+  height: 100%;
+  width: 2px;
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(rgba(255, 220, 220, 0)),
+    to(#243c9c)
+  );
+  background: linear-gradient(to top, rgba(255, 255, 255, 0), #243c9c);
+  -webkit-animation: 2s animateRight linear -1s infinite;
+  animation: 2s animateRight linear -1s infinite;
+}
+
+@keyframes animateRight {
+  0% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+  }
+  100% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+}
+
+.about-me-container span:nth-child(3) {
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(255, 220, 220, 0)),
+    to(#243c9c)
+  );
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #243c9c);
+  -webkit-animation: 2s animateBottom linear infinite;
+  animation: 2s animateBottom linear infinite;
+}
+
+@keyframes animateBottom {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+}
+
+.about-me-container span:nth-child(4) {
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 2px;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(255, 220, 220, 0)),
+    to(#243c9c)
+  );
+  background: linear-gradient(to bottom, rgba(255, 220, 220, 0), #243c9c);
+  -webkit-animation: 2s animateLeft linear -1s infinite;
+  animation: 2s animateLeft linear -1s infinite;
+}
+
+@keyframes animateLeft {
+  0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+  }
 }
