--- a/src/pages/Homepage/homepage.scss
+++ b/src/pages/Homepage/homepage.scss
@@ -1,4 +1,5 @@
 .banner-container {
+  position: relative;
   display: flex;
   justify-content: center;
   height: 550px;
@@ -7,11 +8,292 @@
 }
 
 h1.banner-text {
+  position: relative;
   display: flex;
   align-items: center;
-  color: #fff;
+  justify-content: center;
+  z-index: 25;
+}
+
+.inner {
+  position: absolute;
+  background-color: transparent;
+  width: 400px;
+  height: 400px;
+  border-radius: 100%;
+  box-shadow: 0 0 15px #fff, inset 0 0 15px #fff;
+  animation: pulse 2s linear 1s infinite;
+  -webkit-animation: pulse 2s linear 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 8px #fff, inset 0 0 8px #fff;
+  }
+  50% {
+    box-shadow: 0 0 16px #fff, inset 0 0 14px #fff;
+  }
+  100% {
+    box-shadow: 0 0 8px #fff, inset 0 0 8px #fff;
+  }
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    box-shadow: 0 0 8px #fff, inset 0 0 8px #fff;
+  }
+  50% {
+    box-shadow: 0 0 16px #fff, inset 0 0 14px #fff;
+  }
+  100% {
+    box-shadow: 0 0 8px #fff, inset 0 0 8px #fff;
+  }
 }
 
 footer {
-  border-top: 1px solid #000;
+  position: relative;
+  padding-top: 25px;
+  overflow: hidden;
+  z-index: 9;
 }
+
+footer p {
+  float: left;
+  margin-left: 15px;
+}
+
+footer .socials {
+  float: right;
+  margin-right: 15px;
+}
+
+footer .socials svg.svg-inline--fa.fa-github.fa-w-16 {
+  color: #fff;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+}
+
+footer .socials svg.svg-inline--fa.fa-linkedin.fa-w-14 {
+  height: 20px;
+  width: 20px;
+  color: #0072b1;
+  margin: 0 5px;
+}
+
+footer span {
+  position: absolute;
+}
+
+footer span:nth-child(1) {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(255, 220, 220, 0)),
+    to(#243c9c)
+  );
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #243c9c);
+  -webkit-animation: 2s animateBottom linear infinite;
+  animation: 2s animateBottom linear infinite;
+}
+
+@keyframes animateBottom {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+}
+
+/*+++++++++TEXT FLICKERING++++++++
+.sign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Clip";
+  text-transform: uppercase;
+  color: #a9e4e9;
+  text-shadow: 0 0 0.6rem #a9e4e9, 0 0 1.5rem #2c5cdd,
+    -0.2rem 0.1rem 1rem #2c5cdd, 0.2rem 0.1rem 1rem #2c5cdd,
+    0 -0.5rem 2rem #243c9c, 0 0.5rem 3rem #243c9c;
+  animation: shine 2s forwards, flicker 3s infinite;
+  z-index: 9;
+}
+
+@keyframes blink {
+  0%,
+  22%,
+  36%,
+  75% {
+    color: #a9e4e9;
+    text-shadow: 0 0 0.6rem #a9e4e9, 0 0 1.5rem #2c5cdd,
+      -0.2rem 0.1rem 1rem #2c5cdd, 0.2rem 0.1rem 1rem #2c5cdd,
+      0 -0.5rem 2rem #243c9c, 0 0.5rem 3rem #243c9c;
+  }
+  28%,
+  33% {
+    color: #2c5cdd;
+    text-shadow: none;
+  }
+  82%,
+  97% {
+    color: #243c9c;
+    text-shadow: none;
+  }
+}
+
+.flicker {
+  animation: shine 2s forwards, blink 3s 2s infinite;
+}
+
+.fast-flicker {
+  animation: shine 2s forwards, blink 10s 1s infinite;
+}
+
+@keyframes shine {
+  0% {
+    color: #2c3955;
+    text-shadow: none;
+  }
+  100% {
+    color: #a9e4e9;
+    text-shadow: 0 0 0.6rem #a9e4e9, 0 0 1.5rem #2c5cdd,
+      -0.2rem 0.1rem 1rem #2c5cdd, 0.2rem 0.1rem 1rem #2c5cdd,
+      0 -0.5rem 2rem #243c9c, 0 0.5rem 3rem #243c9c;
+  }
+}
+
+@keyframes flicker {
+  from {
+    opacity: 1;
+  }
+
+  4% {
+    opacity: 0.9;
+  }
+
+  6% {
+    opacity: 0.85;
+  }
+
+  8% {
+    opacity: 0.95;
+  }
+
+  10% {
+    opacity: 0.9;
+  }
+
+  11% {
+    opacity: 0.922;
+  }
+
+  12% {
+    opacity: 0.9;
+  }
+
+  14% {
+    opacity: 0.95;
+  }
+
+  16% {
+    opacity: 0.98;
+  }
+
+  17% {
+    opacity: 0.9;
+  }
+
+  19% {
+    opacity: 0.93;
+  }
+
+  20% {
+    opacity: 0.99;
+  }
+
+  24% {
+    opacity: 1;
+  }
+
+  26% {
+    opacity: 0.94;
+  }
+
+  28% {
+    opacity: 0.98;
+  }
+
+  37% {
+    opacity: 0.93;
+  }
+
+  38% {
+    opacity: 0.5;
+  }
+
+  39% {
+    opacity: 0.96;
+  }
+
+  42% {
+    opacity: 1;
+  }
+
+  44% {
+    opacity: 0.97;
+  }
+
+  46% {
+    opacity: 0.94;
+  }
+
+  56% {
+    opacity: 0.9;
+  }
+
+  58% {
+    opacity: 0.9;
+  }
+
+  60% {
+    opacity: 0.99;
+  }
+
+  68% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0.9;
+  }
+
+  72% {
+    opacity: 0.95;
+  }
+
+  93% {
+    opacity: 0.93;
+  }
+
+  95% {
+    opacity: 0.95;
+  }
+
+  97% {
+    opacity: 0.93;
+  }
+
+  to {
+    opacity: 1;
+  }
+} 
+*/
