--- a/src/pages/Portfolio/portfolio.scss
+++ b/src/pages/Portfolio/portfolio.scss
@@ -1,6 +1,6 @@
 /*++++++++CONTAINERS++++++++++*/
 .portfolio-container.container {
-  margin-bottom: 100px;
+  margin: 50px auto;
 }
 
 .portfolio-projects.container.col-md-12 {
@@ -55,10 +55,46 @@
   transition: 0.5s;
 }
 
-.portfolio-projects a:hover {
+/* Shine */
+.portfolio-projects a::before {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
   content: "";
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+}
+.portfolio-projects a:hover {
   color: #fff;
   font-size: 1.2rem;
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.portfolio-projects a:hover::before {
+  color: #fff;
+  -webkit-animation: shine 0.75s;
+  animation: shine 0.75s;
+}
+@-webkit-keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
 }
