changed borders on footer and about card

--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -285,9 +285,9 @@ button.type-3.btn.btn-primary:hover:before {
     right top,
     left top,
     from(rgba(255, 220, 220, 0)),
-    to(#243c9c)
+    to(#69ca62)
   );
-  background: linear-gradient(to left, rgba(255, 255, 255, 0), #243c9c);
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #69ca62);
   -webkit-animation: 2s animateTop linear infinite;
   animation: 2s animateTop linear infinite;
 }
@@ -313,9 +313,9 @@ button.type-3.btn.btn-primary:hover:before {
     left bottom,
     left top,
     from(rgba(255, 220, 220, 0)),
-    to(#243c9c)
+    to(#69ca62)
   );
-  background: linear-gradient(to top, rgba(255, 255, 255, 0), #243c9c);
+  background: linear-gradient(to top, rgba(255, 255, 255, 0), #69ca62);
   -webkit-animation: 2s animateRight linear -1s infinite;
   animation: 2s animateRight linear -1s infinite;
 }
@@ -341,9 +341,9 @@ button.type-3.btn.btn-primary:hover:before {
     left top,
     right top,
     from(rgba(255, 220, 220, 0)),
-    to(#243c9c)
+    to(#69ca62)
   );
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), #243c9c);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #69ca62);
   -webkit-animation: 2s animateBottom linear infinite;
   animation: 2s animateBottom linear infinite;
 }
@@ -369,9 +369,9 @@ button.type-3.btn.btn-primary:hover:before {
     left top,
     left bottom,
     from(rgba(255, 220, 220, 0)),
-    to(#243c9c)
+    to(#69ca62)
   );
-  background: linear-gradient(to bottom, rgba(255, 220, 220, 0), #243c9c);
+  background: linear-gradient(to bottom, rgba(255, 220, 220, 0), #69ca62);
   -webkit-animation: 2s animateLeft linear -1s infinite;
   animation: 2s animateLeft linear -1s infinite;
 }
