--- a/src/pages/Homepage/homepage.scss
+++ b/src/pages/Homepage/homepage.scss
@@ -95,9 +95,9 @@ footer span:nth-child(1) {
     left top,
     right top,
     from(rgba(255, 220, 220, 0)),
-    to(#243c9c)
+    to(#69ca62)
   );
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), #243c9c);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #69ca62);
   -webkit-animation: 2s animateBottom linear infinite;
   animation: 2s animateBottom linear infinite;
 }
